ProtocolBlock nav disappearance animation added on move and move.after; __table-card-value on mobile style fix

--- a/src/blocks/ProtocolBlock/ProtocolBlock.scss
+++ b/src/blocks/ProtocolBlock/ProtocolBlock.scss
@@ -15,7 +15,7 @@
 		&-nav {
 			opacity: 1;
 			white-space: nowrap;
-			transition: opacity .5s ease;
+			transition: opacity .4s ease;
 			margin-top: auto;
 			&-item {
 				position: relative;
@@ -70,10 +70,12 @@
 			}
 			&-value {
 				position: relative;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				column-gap: 10px;
+				._inner-wrapper {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					column-gap: 10px;
+				}
 				padding: 31px;
 				&::after {
 					content: "";
@@ -137,7 +139,14 @@
 			}
 			&-card {
 				&-value {
-					justify-content: flex-end;
+					._inner-wrapper {
+						width: 121px;
+						margin-left: auto;
+					}
+					&::after {
+						left: 30px;
+						right: 30px;
+					}
 				}
 			}
 		}
@@ -182,10 +191,17 @@
 			}
 			&-card {
 				&-value {
-					column-gap: 5px;
 					padding: 16px;
-					img {
-						width: 46px;
+					._inner-wrapper {
+						width: 88px;
+						column-gap: 5px;
+						img {
+							width: 46px;
+						}
+					}
+					&::after {
+						left: 16px;
+						right: 16px;
 					}
 				}
 			}
